--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
                <div class="card bg-dark">
                   <h5 class="card-header text-white text-center">DONE</h5>
                  <div class="card-body d-flex justify-content-center">
-                 <h1 class="text-white">not set</h1>
+                 <h1 class="text-white">0</h1>
                  </div>
                </div>
              </div>
@@ -71,7 +71,7 @@
                <div class="card bg-dark">
                   <h5 class="card-header text-white text-center">UNDONE</h5>
                  <div class="card-body d-flex justify-content-center">
-                   <h1 class=" text-white ">not set</h1>
+                   <h1 class=" text-white ">0</h1>
                  </div>
                </div>
              </div>
@@ -92,8 +92,8 @@
                 <tr v-for="(task) in liste">
 
                     <td>{{task.id}}</td>
-                    <td class="fs-3 text-decoration-line-through" v-if="task.done">{{task.description}}</td>
-                    <td class="fs-3" v-else="!task.done">{{task.description}}</td>
+                    <td class="fw-bold fst-italic fs-3 text-decoration-line-through" v-if="task.done">{{task.description}}</td>
+                    <td class="fw-bold fs-3" v-else="!task.done">{{task.description}}</td>
                     <td>
                         <button @click="showTodo(task)" data-bs-toggle="modal" data-bs-target="#viewTask" class="btn btn-secondary btn-lg m-2">
                             <i class="fa-solid fa-eye"></i>
