--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                <div class="card bg-dark">
                   <h5 class="card-header text-white text-center">DONE</h5>
                  <div class="card-body d-flex justify-content-center">
-                 <h1 class="text-white">0</h1>
+                 <h1 class="text-white">{{completedTasks.length}}</h1>
                  </div>
                </div>
              </div>
              <div class="col-4">
                <div class="card bg-dark">
-                   <h5 class="card-header text-white text-center">ALL MISSIONS</h5>
+                   <h5 class="card-header text-white text-center">ALL TASKS</h5>
                    <div class="card-body d-flex justify-content-center">
                      <h1 class=" text-white ">{{liste.length}}</h1>
                    </div>
@@ -71,7 +71,7 @@
                <div class="card bg-dark">
                   <h5 class="card-header text-white text-center">UNDONE</h5>
                  <div class="card-body d-flex justify-content-center">
-                   <h1 class=" text-white ">0</h1>
+                   <h1 class=" text-white ">{{unCompletedTasks.length}}</h1>
                  </div>
                </div>
              </div>
