--- a/index.html
+++ b/index.html
@@ -11,37 +11,25 @@
 </head>
 <body>
     <div id="app">
-        <nav class="navbar navbar-dark bg-dark mb-2 shadow p-3 mb-2 bg-body-tertiary">
+        <nav class="navbar navbar-primary bg-primary mb-2 shadow p-3 mb-2 bg-body-tertiary">
             <div class="container-fluid">
               <!-- options sidebar  -->
 
-              <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fa-solid fa-bars  m-2"></i>Options</button>
-              <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
-                <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">More options</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                  <div class="input-group flex-nowrap">
-                    <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-magnifying-glass"></i></span>
-                    <input type="text" class="form-control" placeholder="Find tasks" aria-label="Username" aria-describedby="addon-wrapping">
-              </div>
-
             </div>   
         </nav>
-      <div class="d-flex justify-content-between bg-dark p-2 text-white mb-2 shadow p-3 mb-2 bg-body-tertiary">
+      <div class="d-flex justify-content-between bg-primary p-2 text-white mb-2 shadow p-3 mb-2 bg-body-tertiary">
         <h1>Your List</h1>
         <div>
 
             <div class="btn-group me-2">
-              <button @click="uploadTodo()" type="button" class="btn btn-secondary btn-lg"><i
+              <button @click="uploadTodo()" type="button" class="btn btn-dark btn-lg"><i
                   class="fa-solid fa-upload"></i></button>
             </div>
             <div class="btn-group me-2">
-              <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="modal" data-bs-target="#addNewTask"><i class="fa-solid fa-plus"></i></button>
+              <button type="button" class="btn btn-dark btn-lg" data-bs-toggle="modal" data-bs-target="#addNewTask"><i class="fa-solid fa-plus"></i></button>
             </div>
             <div class="btn-group me-2">
-              <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="modal" data-bs-target="#deletelist"><i class="fa-solid fa-trash"></i></button>
+              <button type="button" class="btn btn-dark btn-lg" data-bs-toggle="modal" data-bs-target="#deletelist"><i class="fa-solid fa-trash"></i></button>
             </div>
           </div>
         </div>
@@ -50,7 +38,7 @@
 
         <div class="row mb-2 shadow p-3 mb-2 bg-body-tertiary rounded">  
             <div class="col-4  ">
-               <div class="card bg-dark">
+               <div class="card bg-primary">
                   <h5 class="card-header text-white text-center">DONE</h5>
                  <div class="card-body d-flex justify-content-center">
                  <h1 class="text-white">{{completedTasks.length}}</h1>
@@ -58,7 +46,7 @@
                </div>
              </div>
              <div class="col-4">
-               <div class="card bg-dark">
+               <div class="card bg-primary">
                    <h5 class="card-header text-white text-center">ALL TASKS</h5>
                    <div class="card-body d-flex justify-content-center">
                      <h1 class=" text-white ">{{liste.length}}</h1>
@@ -66,7 +54,7 @@
               </div>
              </div> 
              <div class="col-4">
-               <div class="card bg-dark">
+               <div class="card bg-primary">
                   <h5 class="card-header text-white text-center">UNDONE</h5>
                  <div class="card-body d-flex justify-content-center">
                    <h1 class=" text-white ">{{unCompletedTasks.length}}</h1>
