--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<div class=" d-flex justify-content-between container-fluid">
 				<!-- options sidebar  -->
 				<h1 class=" text-white">Your List</h1>
+
 				<div>
 
 					<div class="btn-group me-2">
@@ -45,6 +46,11 @@
 							<i v-if="showStatics" class="fa-solid fa-table-list"></i>
 							<i v-else class="fa-solid fa-chart-simple"></i></button>
 					</div>
+					<div class="btn-group me-2">
+						<button type="button" class="btn btn-dark btn-lg" data-bs-target="#findItem"
+							data-bs-toggle="modal"><i class="fa-solid fa-magnifying-glass"></i></button>
+					</div>
+
 
 				</div>
 		</nav>
@@ -161,7 +167,7 @@
 									<option selected>Done</option>
 									<option value="In progress">In progress</option>
 									<option value="Canceled">Canceled</option>
-									<option value="TimeOuted">TimeOuted</option>
+									<option value="TimeOut">TimeOuted</option>
 								</select>
 
 								<button type="submit" data-bs-dismiss="modal" class=" m-3 btn btn-dark">Add
@@ -232,7 +238,7 @@
 									<option selected>Done</option>
 									<option value="In progress">In progress</option>
 									<option value="Canceled">Canceled</option>
-									<option value="TimeOuted">TimeOuted</option>
+									<option value="TimeOut">TimeOuted</option>
 								</select>
 							</form>
 						</div>
@@ -284,13 +290,31 @@
 					</div>
 				</div>
 			</div>
+			<!-- find item modal -->
+
+			<div class="modal fade" id="findItem" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<input type="text" class="d-flex  form-control" v-model="searcheString" placeholder="Description" aria-label="Username"
+								aria-describedby="addon-wrapping">
+
+							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+							<button type="button" data-bs-dismiss="modal" class="btn btn-dark" @click="findItem()">Find</button>
+						</div>
+					</div>
+				</div>
+			</div>
 
 		</div>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
-	<script src="script.js"></script>
+	<script src="main.js"></script>
 </body>
 
 </html>
