--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
 		integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" -->
+		<!-- integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
 	<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"
@@ -18,48 +18,79 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
 		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<!-- Add the evo-calendar.css for styling -->
+	<link rel="stylesheet" type="text/css"
+		href="https://cdn.jsdelivr.net/npm/evo-calendar@1.1.2/evo-calendar/css/evo-calendar.min.css" />
+
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css" rel="stylesheet" />
 </head>
 
 <body>
 	<div id="app">
-		<nav class="navbar navbar-dark bg-dark mb-2 shadow-lg p-3 mb-2 bg-body-tertiary">
+		<nav class="navbar navbar-dark bg-primary mb-2 shadow-lg p-3 mb-2 bg-body-tertiary">
 			<div class=" d-flex justify-content-between container-fluid">
 				<!-- options sidebar  -->
-				<h1 class=" text-white">Your List</h1>
+				<h1 class=" text-primary">Your List</h1>
 
 				<div>
 
 					<div class="btn-group me-2">
-						<button @click="uploadTodo()" type="button" class="btn btn-dark btn-lg"><i
+						<button @click="uploadTodo()" type="button" class="btn btn-primary btn-lg"><i
 								class="fa-solid fa-upload"></i></button>
 					</div>
 					<div class="btn-group me-2">
-						<button type="button" class="btn btn-dark btn-lg" data-bs-toggle="modal"
+						<button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal"
 							data-bs-target="#addNewTask"><i class="fa-solid fa-plus"></i></button>
 					</div>
 					<div class="btn-group me-2">
-						<button type="button" class="btn btn-dark btn-lg" data-bs-toggle="modal"
+						<button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal"
 							data-bs-target="#deletelist"><i class="fa-solid fa-trash"></i></button>
 					</div>
 					<div class="btn-group me-2">
-						<button @click="showStatics = !showStatics" type="button" class="btn btn-dark btn-lg">
+						<button @click="canvas()" type="button" class="btn btn-primary btn-lg">
 							<i v-if="showStatics" class="fa-solid fa-table-list"></i>
 							<i v-else class="fa-solid fa-chart-simple"></i></button>
 					</div>
 					<div class="btn-group me-2">
-						<button type="button" class="btn btn-dark btn-lg" data-bs-target="#findItem"
+						<button type="button" class="btn btn-primary btn-lg" data-bs-target="#findItem"
 							data-bs-toggle="modal"><i class="fa-solid fa-magnifying-glass"></i></button>
 					</div>
+					<div class="btn-group me-2">
+						<button @click="showCalendar = true" type="button" class="btn btn-primary btn-lg"><i
+								class="fa-solid fa-calendar"></i></button>
+					</div>
+
 
 
 				</div>
 		</nav>
 
+		<!-- Login page div -->
+		<div v-if="loginform" class="container-fluid">
+			<form class="m-5 p-5">
+				<div class="mb-3">
+					<label for="exampleInputEmail1" class="form-label">Username</label>
+					<input v-model="user.username" value='dias' type="email" class="form-control"
+						id="exampleInputEmail1" aria-describedby="emailHelp">
+				</div>
+				<div class="mb-3">
+					<label for="exampleInputPassword1" class="form-label">Password</label>
+					<input type="password" v-model="user.password" value='dd' class="form-control"
+						id="exampleInputPassword1">
+				</div>
+				<div class="mb-3 form-check">
+					<input type="checkbox" class="form-check-input" id="exampleCheck1">
+					<label class="form-check-label" for="exampleCheck1">Check me out</label>
+				</div>
+				<button type="submit" @click="checkUser()" class="btn btn-primary">Submit</button>
+			</form>
+		</div>
+
 		<div class="container-fluid">
 
 			<!-- Cards -->
 
-			<div v-if="showStatics" class="row mb-2 shadow-lg p-3 mb-2 bg-body-tertiary rounded">
+			<div v-show="showStatics" class="row mb-2 shadow-lg p-3 mb-2 bg-body-tertiary rounded">
 				<div class="col-4  ">
 					<div class="card bg-dark">
 						<h5 class="card-header text-white text-center">DONE</h5>
@@ -84,11 +115,23 @@
 						</div>
 					</div>
 				</div>
+
+				<div v-if="spinner" class="text-center">
+					<div class="spinner-border fs-1" role="status">
+						<span class="visually-hidden">Loading...</span>
+					</div>
+				</div>
+				<div class="d-flex justify-content-center">
+					<div class="col-4 mx-5">
+						<canvas id="myChart"></canvas>
+					</div>
+
+				</div>
 			</div>
 
 			<!-- Table -->
 
-			<table class="table" v-if="!showStatics">
+			<table class="table" v-if="!showStatics && !loginform">
 				<thead>
 					<tr>
 						<th scope="col">Id</th>
@@ -123,7 +166,7 @@
 							{{task.status}}
 						</td>
 						<td v-if="task.done">
-							<button class="btn btn-dark rounded" @click="task.done=false">
+							<button class="btn btn-primary rounded" @click="task.done=false">
 								<i class="fa-solid fa-check"></i>
 							</button>
 						</td>
@@ -164,13 +207,13 @@
 								<label for="exampleInputPassword1" class="form-label">Task status</label>
 								<select class="  form-select" aria-label="Default select example"
 									v-model="todoItem.status">
-									<option selected>Done</option>
-									<option value="In progress">In progress</option>
-									<option value="Canceled">Canceled</option>
-									<option value="TimeOut">TimeOuted</option>
+									<option selected value="0">Done</option>
+									<option value="1">In progress</option>
+									<option value="2">Canceled</option>
+									<option value="3">TimeOut</option>
 								</select>
 
-								<button type="submit" data-bs-dismiss="modal" class=" m-3 btn btn-dark">Add
+								<button type="submit" data-bs-dismiss="modal" class=" m-3 btn btn-primary">Add
 									task</button>
 							</form>
 						</div>
@@ -238,13 +281,13 @@
 									<option selected>Done</option>
 									<option value="In progress">In progress</option>
 									<option value="Canceled">Canceled</option>
-									<option value="TimeOut">TimeOuted</option>
+									<option value="TimeOut">TimeOut</option>
 								</select>
 							</form>
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-							<button type="submit" class="btn btn-dark" data-bs-dismiss="modal">Add task</button>
+							<button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Add task</button>
 						</div>
 					</div>
 				</div>
@@ -296,25 +339,44 @@
 				<div class="modal-dialog">
 					<div class="modal-content">
 						<div class="modal-header">
-							<input type="text" class="d-flex  form-control" v-model="searcheString" placeholder="Description" aria-label="Username"
-								aria-describedby="addon-wrapping">
+							<input type="text" class="d-flex  form-control" v-model="searcheString"
+								placeholder="Description" aria-label="Username" aria-describedby="addon-wrapping">
 
 							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-							<button type="button" data-bs-dismiss="modal" class="btn btn-dark" @click="findItem()">Find</button>
+							<button type="button" data-bs-dismiss="modal" class="btn btn-primary"
+								@click="findItem(searcheString)">Find</button>
 						</div>
 					</div>
 				</div>
 			</div>
 
+			<div v-show="showCalendar" id="calendar"></div>
+
 		</div>
 	</div>
+
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
-	<script src="main.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js"
+		integrity="sha512-ZwR1/gSZM3ai6vCdI+LVF1zSq/5HznD3ZSTk7kajkaj4D292NLuduDCO1c/NT8Id+jE58KYLKT7hXnbtryGmMg=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+	<script src="main.js">
+	</script>
+
+	<!-- Add jQuery library (required) -->
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
+
+	<!-- Add the evo-calendar.js for.. obviously, functionality! -->
+	<script src="https://cdn.jsdelivr.net/npm/evo-calendar@1.1.2/evo-calendar/js/evo-calendar.min.js"></script>
+	<!-- MDB -->
+	<script type="text/javascript"
+		src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
+
 </body>
 
 </html>
