--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" -->
-		<!-- integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
+	<!-- integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
 	<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"
@@ -23,9 +23,22 @@
 		href="https://cdn.jsdelivr.net/npm/evo-calendar@1.1.2/evo-calendar/css/evo-calendar.min.css" />
 
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css" rel="stylesheet" />
+
+	<!-- link for font -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
+	<style>
+		* {
+			font-family: "Oswald", sans-serif;
+			font-optical-sizing: auto;
+			font-weight: <weight>;
+			font-style: normal;
+		}
+	</style>
 	<div id="app">
 		<nav class="navbar navbar-dark bg-primary mb-2 shadow-lg p-3 mb-2 bg-body-tertiary">
 			<div class=" d-flex justify-content-between container-fluid">
@@ -56,7 +69,7 @@
 							data-bs-toggle="modal"><i class="fa-solid fa-magnifying-glass"></i></button>
 					</div>
 					<div class="btn-group me-2">
-						<button @click="showCalendar = true" type="button" class="btn btn-primary btn-lg"><i
+						<button @click="calendar()" type="button" class="btn btn-primary btn-lg"><i
 								class="fa-solid fa-calendar"></i></button>
 					</div>
 
@@ -67,23 +80,59 @@
 
 		<!-- Login page div -->
 		<div v-if="loginform" class="container-fluid">
-			<form class="m-5 p-5">
-				<div class="mb-3">
-					<label for="exampleInputEmail1" class="form-label">Username</label>
-					<input v-model="user.username" value='dias' type="email" class="form-control"
-						id="exampleInputEmail1" aria-describedby="emailHelp">
+			<section class="vh-100">
+				<div class="container-fluid h-custom">
+					<div class="row d-flex justify-content-center align-items-center h-100">
+						<div class="col-md-9 col-lg-6 col-xl-5">
+							<img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+								class="img-fluid" alt="Sample image">
+						</div>
+						<div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+							<form>
+
+								<div class="divider d-flex align-items-center my-4">
+									<p class="text-center fw-bold mx-3 mb-0">Or</p>
+								</div>
+
+								<!-- Email input -->
+								<div data-mdb-input-init class="form-outline mb-4">
+									<input type="email" id="form3Example3" class="form-control form-control-lg"
+										v-model="user.username" placeholder="Enter a valid username" />
+									<label class="form-label" for="form3Example3">Username</label>
+								</div>
+
+								<!-- Password input -->
+								<div data-mdb-input-init class="form-outline mb-3">
+									<input type="password" id="form3Example4" class="form-control form-control-lg"
+										placeholder="Enter password" v-model="user.password" />
+									<label class="form-label" for="form3Example4">Password</label>
+								</div>
+
+								<div class="d-flex justify-content-between align-items-center">
+									<!-- Checkbox -->
+									<div class="form-check mb-0">
+										<input class="form-check-input me-2" type="checkbox" value=""
+											id="form2Example3" />
+										<label class="form-check-label" for="form2Example3">
+											Remember me
+										</label>
+									</div>
+									<a href="#!" class="text-body">Forgot password?</a>
+								</div>
+
+								<div class="text-center text-lg-start mt-4 pt-2">
+									<button type="button" data-mdb-button-init data-mdb-ripple-init
+										class="btn btn-primary btn-lg"
+										style="padding-left: 2.5rem; padding-right: 2.5rem;" @click="checkUser()" >Login</button>
+									<p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"
+											class="link-danger">Register</a></p>
+								</div>
+
+							</form>
+						</div>
+					</div>
 				</div>
-				<div class="mb-3">
-					<label for="exampleInputPassword1" class="form-label">Password</label>
-					<input type="password" v-model="user.password" value='dd' class="form-control"
-						id="exampleInputPassword1">
-				</div>
-				<div class="mb-3 form-check">
-					<input type="checkbox" class="form-check-input" id="exampleCheck1">
-					<label class="form-check-label" for="exampleCheck1">Check me out</label>
-				</div>
-				<button type="submit" @click="checkUser()" class="btn btn-primary">Submit</button>
-			</form>
+			</section>
 		</div>
 
 		<div class="container-fluid">
@@ -131,7 +180,7 @@
 
 			<!-- Table -->
 
-			<table class="table" v-if="!showStatics && !loginform">
+			<table class="table" v-if="showTable">
 				<thead>
 					<tr>
 						<th scope="col">Id</th>
