LIVE PREVIEW README UPDATED

--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
 
 								<!-- Email input -->
 								<div data-mdb-input-init class="form-outline mb-4">
-									<input type="email" id="form3Example3" class="form-control form-control-lg"
-										v-model="user.username" placeholder="Enter a valid username" />
+									<input type="email" id="form3Example3" class="form-control form-control-lg" value=""
+										v-model="user.username" placeholder="Enter a valid username"/>
 									<label class="form-label" for="form3Example3">Username</label>
 								</div>
 
 								<!-- Password input -->
 								<div data-mdb-input-init class="form-outline mb-3">
-									<input type="password" id="form3Example4" class="form-control form-control-lg"
+									<input type="password" id="form3Example4" class="form-control form-control-lg" value=""
 										placeholder="Enter password" v-model="user.password" />
 									<label class="form-label" for="form3Example4">Password</label>
 								</div>
