--- a/index.html
+++ b/index.html
@@ -44,8 +44,26 @@
 			<div class=" d-flex justify-content-between container-fluid">
 				<!-- options sidebar  -->
 				<h1 class=" text-primary">Your List</h1>
+				<div class="btn-group me-2 ">
+					<button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton"
+						data-mdb-dropdown-init data-mdb-ripple-init aria-expanded="false">
+						<i class="fa-solid fa-house"></i>
+					</button>
+					<div class="dropdown-menu " aria-labelledby="dropdownMenuButton">
+						<div class="d-flex flex-column">
 
+							<button @click="canvas()" type="button" class="btn btn-lg ">
+								<i class="fa-solid fa-chart-simple"></i></button>
+							<button @click="displayTable()" type="button" class="btn btn-lg">
+								<i class="fa-solid fa-table-list"></i>
+								<button @click="calendar()" type="button" class="btn btn-lg"><i
+										class="fa-solid fa-calendar"></i></button>
+						</div>
+
+					</div>
+				</div>
 				<div>
+
 
 					<div class="btn-group me-2">
 						<button @click="uploadTodo()" type="button" class="btn btn-primary btn-lg"><i
@@ -59,18 +77,12 @@
 						<button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal"
 							data-bs-target="#deletelist"><i class="fa-solid fa-trash"></i></button>
 					</div>
-					<div class="btn-group me-2">
-						<button @click="canvas()" type="button" class="btn btn-primary btn-lg">
-							<i v-if="showStatics" class="fa-solid fa-table-list"></i>
-							<i v-else class="fa-solid fa-chart-simple"></i></button>
-					</div>
+
+
+
 					<div class="btn-group me-2">
 						<button type="button" class="btn btn-primary btn-lg" data-bs-target="#findItem"
 							data-bs-toggle="modal"><i class="fa-solid fa-magnifying-glass"></i></button>
-					</div>
-					<div class="btn-group me-2">
-						<button @click="calendar()" type="button" class="btn btn-primary btn-lg"><i
-								class="fa-solid fa-calendar"></i></button>
 					</div>
 					<div class="btn-group me-2">
 						<button @click="logOut()" type="button" class="btn btn-primary btn-lg"><i
@@ -93,48 +105,32 @@
 								class="img-fluid" alt="Sample image">
 						</div>
 						<div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-							<form>
 
-								<div class="divider d-flex align-items-center my-4">
-									<p class="text-center fw-bold mx-3 mb-0">Or</p>
-								</div>
+							<div v-if="loginFailed" class="divider d-flex align-items-center my-4">
+								<h3 class="text-center text-danger fw-bold mx-3 mb-0">Login failed</h3>
+								<i class="fa-solid text-danger fw-1 fa-triangle-exclamation"></i>
+							</div>
 
-								<!-- Email input -->
-								<div data-mdb-input-init class="form-outline mb-4">
-									<input type="email" id="form3Example3" class="form-control form-control-lg" value=""
-										v-model="user.username" placeholder="Enter a valid username"/>
-									<label class="form-label" for="form3Example3">Username</label>
-								</div>
+							<!-- Email input -->
+							<label class="form-label" for="form3Example3">Username</label>
+							<div data-mdb-input-init class="mb-4">
+								<input type="email" id="form3Example3" class="form-control form-control-lg"
+									v-model="user.username" placeholder="Enter a valid username" value="some value" />
+							</div>
 
-								<!-- Password input -->
-								<div data-mdb-input-init class="form-outline mb-3">
-									<input type="password" id="form3Example4" class="form-control form-control-lg" value=""
-										placeholder="Enter password" v-model="user.password" />
-									<label class="form-label" for="form3Example4">Password</label>
-								</div>
+							<!-- Password input -->
+							<label class="form-label" for="form3Example4">Password</label>
+							<div data-mdb-input-init class="mb-3">
+								<input type="password" id="form3Example4" class="form-control form-control-lg"
+									placeholder="Enter password" v-model="user.password" />
+							</div>
 
-								<div class="d-flex justify-content-between align-items-center">
-									<!-- Checkbox -->
-									<div class="form-check mb-0">
-										<input class="form-check-input me-2" type="checkbox" value=""
-											id="form2Example3" />
-										<label class="form-check-label" for="form2Example3">
-											Remember me
-										</label>
-									</div>
-									<a href="#!" class="text-body">Forgot password?</a>
-								</div>
+							<div class="text-center text-lg-start mt-4 pt-2">
+								<button type="button" data-mdb-button-init data-mdb-ripple-init
+									class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;"
+									@click="checkUser()">Login</button>
+							</div>
 
-								<div class="text-center text-lg-start mt-4 pt-2">
-									<button type="button" data-mdb-button-init data-mdb-ripple-init
-										class="btn btn-primary btn-lg"
-										style="padding-left: 2.5rem; padding-right: 2.5rem;"
-										@click="checkUser()">Login</button>
-									<p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"
-											class="link-danger">Register</a></p>
-								</div>
-
-							</form>
 						</div>
 					</div>
 				</div>
@@ -309,7 +305,7 @@
 				</div>
 			</div>
 
-			<!-- editTask modal -->
+			<!-- edit Task modal -->
 
 			<div class="modal fade" id="editTask" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 				<div class="modal-dialog">
@@ -319,7 +315,7 @@
 							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 						</div>
 						<div class="modal-body">
-							<form class="form row" @submit.prevent="updateTodo()">
+							<form class="form row">
 								<div class="mb-3">
 									<label for="recipient-name" class="col-form-label">id</label>
 									<input type="text" class="form-control" v-model="todoItem.id" id="recipient-name"
@@ -342,7 +338,8 @@
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-							<button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Add task</button>
+							<button type="submit" class="btn btn-primary" @click="updateTodo()"
+								data-bs-dismiss="modal">Add task</button>
 						</div>
 					</div>
 				</div>
